Decapitalize subsection headings

--- a/case-studies.tex
+++ b/case-studies.tex
@@ -17,14 +17,14 @@ The 2011 Scottish Census indicates that out of the total amount of Gaelic speake
 
 The B\`ord officially is tasked with promoting and facilitating educational materials, but the initial charter makes no mention of language technology. The National Gaelic Language Plan 2018-2023\footnote{\href{http://www.gaidhlig.scot/launch-of-the-new-national-gaelic-language-plan/}{http://www.gaidhlig.scot/launch-of-the-new-national-gaelic-language-plan/}. \last{April~27}} \citep{bord2018national} mention the Digital Archive of Scottish Gaelic (DASG),\footnote{\href{http://dasg.ac.uk/en}{http://dasg.ac.uk/en}. \last{April~27}} the largest corpus project for Gaelic, but do not specify other language technology being developed (excepting a brief mention of working with Ireland and Nova Scotia developing shared technology and resources. There are some primary and secondary schools, as well as various Gaelic Language and Studies degrees at English-speaking universities, as well as one Gaelic-speaking university Sabhal M\`or Ostaig\footnote{\href{http://www.smo.uhi.ac.uk/en/}{http://www.smo.uhi.ac.uk/en/}. \last{April~27}} on Skye; educational material from the B\`ord is mainly focused in these areas.
 
-\subsubsection{Language Vitality Status}
+\subsubsection{Language vitality status}
 \label{sec:gaelic-vitality-status}
 
 % TODO Add table showing my language vitality metrics for Gaelic
 
 Gaelic has an EGIDS rating of 2, as it is a provincial language given the 2005 GLS Act.\footnote{\href{https://www.ethnologue.com/language/gla}{https://www.ethnologue.com/language/gla}. \last{April~27}}  \citet{lewis2009ethnologue} notes regarding language use that "Resurgence of interest in Scottish Gaelic in 1990s. A number of children learn the language but there are serious problems in language maintenance even in the core areas \citep{salminen2007endangered}. Home, church, community." UNESCO judges it to be {\it definitely endangered}.\footnote{\href{http://www.unesco.org/languages-atlas/en/atlasmap/language-iso-gla.html}{http://www.unesco.org/languages-atlas/en/atlasmap/language-iso-gla.html}. \last{April~27}} The Endangered Languages Project describes it as Threatened or Vulnerable, depending on the source,\footnote{\href{http://endangeredlanguages.com/lang/3049}{http://endangeredlanguages.com/lang/3049}. \last{April~27}} as \citet{salminen2007europe} gives a much smaller population number of 20k for speakers than the other census-based data. \citepos{kornai2013digital} rating declares it as {\it Living}.\footnote{\href{https://hlt.bme.hu/en/dld/language/4656}{https://hlt.bme.hu/en/dld/language/4656}. \last{April~27}}
 
-\subsubsection{Language Resources}
+\subsubsection{Language resources}
 \label{subsec:gaelic-resources}
 
 Gaelic has a long, written history. Today, there are a plethora of written, audio, and video resources. Some of these have been bundled into linguistic corpora. The DASG is the largest corpus for Gaelic available on the web; however, it is not permissively licensed for modification, distribution, or reproduction, and so cannot be considered open source (although it is open access).\footnote{\href{http://dasg.ac.uk/about/terms/en}{http://dasg.ac.uk/about/terms/en}. \last{April~27}} OLAC has 26 resources for Gaelic, including large multilingual corpora, as well.\footnote{\href{http://www.language-archives.org/language/gla}{http://www.language-archives.org/language/gla}. \last{April~27}} A large corpus compiled by An Crub\'ad\'an project is available online \footnote{\href{http://crubadan.org/languages/gd}{http://crubadan.org/languages/gd}. \last{April~27}} \citep{scannell2007crubadan}. WALS has 61 typological features listed for Gaelic,\footnote{\href{http://wals.info/languoid/lect/wals_code_gae}{http://wals.info/languoid/lect/wals\_code\_gae}. \last{April~27}} and Glottolog 35 references.\footnote{\href{http://glottolog.org/resource/languoid/id/scot1245}{http://glottolog.org/resource/languoid/id/scot1245}. \last{April~27}} ODIN has 59 IGT entries for Scottish Gaelic.\footnote{\href{http://odin.linguistlist.org/}{http://odin.linguistlist.org/}. \last{April~27}}
@@ -52,7 +52,7 @@ Ideally, researchers would start to open source more of their code involving Gae
 
 In October 2017 I travelled to Kawawachikamach and interviewed linguists working on a Naskapi bible, visited the school and talked to teachers at length about language efforts there, and talked to individual Naskapi speakers about their thoughts on the language and how it is used. Below, I give a brief overview of Naskapi, note how it would be rated according the metrics covered in Section~\ref{subsec:metrics}, and discuss language resource development. \citet{jancewicz2002applied} is the main source of published information on Naskapi computational developments; I give an update, 15 years on, given my experience in Kawawachikamach. I was unfortunately unable to meet Bill Jancewicz, the SIL missionary there, at that time.
 
-\subsubsection{Language Background}
+\subsubsection{Language background}
 \label{sec:naskapi-language-background}
 
 Naskapi (autonymically \sylla{naskapi} naskapi or \sylla{iyuw iyimuun} iyuw iyimuun) is a Cree language in the Algonquin family spoken in central Quebec \citep{MacKenzie-and-Jancewicz-1994}. Virtually the entire population of around 900 Naskapi live within the reservation Kawawachikamach, around 10 miles from Schefferville, QC. There is another Naskapi community on the Labrador coast, who speak another dialect known as Mushuau Innu, which is out of scope of this paper. Schefferville is only accessible by train or plane, and contains another local tribe called the Innu (which has more than 17,000 members, scattered among Quebec and Labrador\footnote{\href{https://en.wikipedia.org/wiki/Innu}{https://en.wikipedia.org/wiki/Innu}. \last{April~27}}), who live on their own reservation and who speak Montagnais or Innu-aimun, a related language. The two languages are similar, and the Naskapi youth are often diglossic in Montagnais (but the Innu are often not) \cite{macKenzie1980towards}.
@@ -63,7 +63,7 @@ All of the Naskapi speak their own language regularly, in all contexts - excepti
 
 
 
-\subsubsection{Language Vitality Status}
+\subsubsection{Language vitality status}
 \label{sec:naskapi-vitality-status}
 
 % TODO Add table showing my language vitality metrics for Naskapi
