--- a/low-resource-languages.tex
+++ b/low-resource-languages.tex
@@ -213,6 +213,8 @@ This may be an overstatement; while Wikipedia presence may be heavily correlated
 \subsubsection{Metrics for digital presence}
 \label{sec:metrics-for-digital-presence}
 
+\paragraph{\citepos{kornai2013digital} metric}
+
 \citet{kornai2013digital} outlined the first major metric for describing digital presence for a language. These metrics are needed because normal metrics are not directly transferable to digital presence, as digital linguistic data is decoupled from speakers (it can survive beyond them), and because the digital domain is only one of a variety of domains for language usage. He divided languages into four possible categories: Thriving, Vital, Heritage, and Still. These can be thought of as a gradient, with digital ascent being the process of a language moving up the scale. Only 16 languages would be considered Thriving, all of which would be rated at 1 or higher on the EGIDs scale. Vital languages are those which may be in danger in the next hundred years, or show few signs of digital ascent - but they have a large population of speakers and at least some resources, such as a Bible or the UNHR; Heritage languages are dead or historic languages such as Latin which have large online presences that do not relate directly to a living language community; and Still languages show little to no presence on the web at all (although note that this does not mean that they are endangered or moribund outside of the web.)
 
 \citet{kornai2013digital}  looks at five confluent factors; demographics, prestige, the identity function of the language, the level of software support, and Wikipedia presence for a language. Demographics and community size can be gathered by doing a quantitative analysis of all public data available in a language on the web, and by using this data size as a proxy for the amount of speakers of a language using the digital space. This has obvious limits, which Kornai points out, in that the data may not accurately reflect the amount of users, in that it is limited to public data accessible by researchers, and in that it does not give an accurate representation of passive consumption of multilingual data. It would be worth adding that this also does not give an accurate count of multilingual usage of a language. Prestige is an obvious factor for digital ascent; when a language community views one language as more useful or relevant than another, it is more likely to create digital content in one than the other, regardless of social policies and to some extent speaker populations. Identity function marks whether speaking populations identify themselves with a language, and is used largely to weed out certain historical languages, like Latin and Classical Chinese, which have large corpora online but should not be considered in the same grouping as more vibrant, living languages.
@@ -229,7 +231,11 @@ However, others have noted that the prediction that most languages will not digi
 
 In a follow-up paper, \citet{kornai2015new} proposed adding a single number scale to assess digital ascent (\`a la LEI): "For the assessment we propose a simple log-linear formula that derives a single number {\emph D} (digital vitality index) as a weighted sum of well-understood components such as the EGIDS ranking, (log) number of L1 speakers, (log) size of wikipedia, adjusted for quality, (log) crawl size, the existence of FLOSS spellcheckers, etc." The EGIDS ranking was considered objective, given that SIL linguists are generally interested in longer term work with communities as opposed to relatively short-lived or quantitative studies done by computational linguists. This log-linear formula was innovative for cleaning wikipedia, in particular, as it removes the likelihood of large wikipedias built by hobbyists with bots as being indicative of large language communities.
 
+\paragraph{\citepos{gibson2016assessing} extension}
+
 \citet{gibson2016assessing} extends Kornai by adding two separate statuses for languages: Emergent and Latent. Emergent languages are those where there is data, but it is privately hidden in messaging applications or cellphone usage, and unlikely to be accessible by the crawlers and corpora agglomeration tools used in \citet{kornai2013digital}.\footnote{Whether scrapers used to gather corpora from private messaging platforms, such as in \citet{littauerfacebook}, would figure in to this status is uncertain.} These would be identified by researchers in the field, and do not need to have locale or i18n setups before inception. Gibson cites Arabizi (as noted by \citet{darwish2013arabizi}), where numbers are used for sounds not present in standard Arabic, as an example; another might be the use of a forward slash to denote accents in early Irish Gaelic forums, as noted by \citet{scannell2007crubadan}. Latent languages are languages which meet the following criteria: "stable intergenerational transmission of the language, an available model of writing the language, the availability of appropriate technology and infrastructure (internet, mobile phone coverage), fonts in which to write the language in the desired script, and communal desire to see the language used digitally." If all of these are met, then the language could ascend beyond Still into Vital. Such languages would be admittedly impossible to find by measurements, but this category would be helpful for linguists working in the field to determine how to best work with the language community to help bootstrap language development. Gibson also redefined Still, which \citet{kornai2013digital} had marked as languages which are `unable' to ascend, while here they are merely `unlikely'.
+
+\paragraph{\citepos{soria2017digital} metric}
 
 A more recent metric was also introduced in a draft by \citet{soria2017digital}, for the purposes of helping digital language planning for the EU, as part of the Digital Language Diversity Project.\footnote{\href{http://www.dldp.eu/content/reports-digital-language-diversity-europe}{http://www.dldp.eu/content/reports-digital-language-diversity-europe}. \last{May~2}} Their scale has the following states: Pre-digital, Dormant, Emergent, Developing, Vital, and Thriving. Like Gibson, they exclude \citet{kornai2013digital} Heritage status (noting incurrectly that Gibson also included it, which he had not for the same grounds), without sufficient explanation as to why dead languages are not relevant when there are communities based around them, some of which are communities with thousands of L2 speakers. Dormant would be equitable to Latent, while Pre-digital would apply to languages without internet or cell connectivity for the speaking population. Emergent through Thriving are largely matters of scale. While Kornai used proxies for the five factors he mentioned, Soria et al. note that such factors are difficult to quantify; they remedy this by focusing on three indicators: "a group pertaining to a language digital {\it capacity} [sic], a group related to a language digital {\it presence and use}, and a group related to a language digital {\it performance}." \citep[5]{soria2017digital} An example of how these are used can be seen in Figure~\ref{fig:dldp}.
 
