Specify what CoRR is

--- a/references.bib
+++ b/references.bib
@@ -12,7 +12,7 @@ title = {Google's Neural Machine Translation System: Bridging the Gap between Hu
 author  = {Yonghui Wu and Mike Schuster and Zhifeng Chen and Quoc V. Le and Mohammad Norouzi and Wolfgang Macherey and Maxim Krikun and Yuan Cao and Qin Gao and Klaus Macherey and Jeff Klingner and Apurva Shah and Melvin Johnson and Xiaobing Liu and Łukasz Kaiser and Stephan Gouws and Yoshikiyo Kato and Taku Kudo and Hideto Kazawa and Keith Stevens and George Kurian and Nishant Patil and Wei Wang and Cliff Young and Jason Smith and Jason Riesa and Alex Rudnick and Oriol Vinyals and Greg Corrado and Macduff Hughes and Jeffrey Dean},
 year  = {2016},
 URL = {https://arxiv.org/abs/1609.08144},
-journal = {CoRR},
+journal = {Computing Research Repository (CoRR)},
 volume  = {abs/1609.08144}
 }
 
@@ -236,7 +236,7 @@ volume  = {abs/1609.08144}
                Richard Littauer},
   title     = {Report on the Second Workshop on Sustainable Software for Science:
                Practice and Experiences {(WSSSPE2)}},
-  journal   = {CoRR},
+  journal   = {Computing Research Repository (CoRR)},
   volume    = {abs/1507.01715},
   year      = {2015},
   url       = {https://arxiv.org/abs/1507.01715},
