chore: tease out some acronyms from the references

--- a/references.bib
+++ b/references.bib
@@ -11,7 +11,7 @@
 title = {Google's Neural Machine Translation System: Bridging the Gap between Human and Machine Translation},
 author  = {Yonghui Wu and Mike Schuster and Zhifeng Chen and Quoc V. Le and Mohammad Norouzi and Wolfgang Macherey and Maxim Krikun and Yuan Cao and Qin Gao and Klaus Macherey and Jeff Klingner and Apurva Shah and Melvin Johnson and Xiaobing Liu and Łukasz Kaiser and Stephan Gouws and Yoshikiyo Kato and Taku Kudo and Hideto Kazawa and Keith Stevens and George Kurian and Nishant Patil and Wei Wang and Cliff Young and Jason Smith and Jason Riesa and Alex Rudnick and Oriol Vinyals and Greg Corrado and Macduff Hughes and Jeffrey Dean},
 year  = {2016},
-URL = {https://arxiv.org/abs/1609.08144},
+url = {https://arxiv.org/abs/1609.08144},
 journal = {Computing Research Repository (CoRR)},
 volume  = {abs/1609.08144}
 }
@@ -76,10 +76,10 @@ volume  = {abs/1609.08144}
 @inproceedings{fraga2015improving,
   title={Improving data selection for low-resource STT and KWS},
   author={Fraga-Silva, Thiago and Laurent, Antoine and Gauvain, Jean-Luc and Lamel, Lori and Le, Viet-Bac and Messaoudi, Abdel},
-  booktitle={Automatic Speech Recognition and Understanding (ASRU), 2015 IEEE Workshop on},
+  booktitle={Automatic Speech Recognition and Understanding (ASRU), 2015 Institute of Electrical and Electronics Engineers (IEEE) Workshop on},
   pages={153--159},
   year={2015},
-  organization={IEEE}
+  organization={Institute of Electrical and Electronics Engineers (IEEE)}
 }
 
 @article{muller2017improving,
@@ -124,12 +124,12 @@ volume  = {abs/1609.08144}
 @article{schaller1997moore,
   title={Moore's law: past, present and future},
   author={Schaller, Robert R},
-  journal={IEEE spectrum},
+  journal={Institute of Electrical and Electronics Engineers (IEEE) Spectrum},
   volume={34},
   number={6},
   pages={52--59},
   year={1997},
-  publisher={IEEE}
+  publisher={Institute of Electrical and Electronics Engineers (IEEE)}
 }
 
 
@@ -712,7 +712,7 @@ publisher={Blackwell}
   booktitle={Software maintenance and reengineering (csmr), 2013 17th european conference on},
   pages={323--326},
   year={2013},
-  organization={IEEE}
+  organization={Institute of Electrical and Electronics Engineers (IEEE)}
 }
 
 @article{schwab2000making,
@@ -723,7 +723,7 @@ publisher={Blackwell}
   number={6},
   pages={61--67},
   year={2000},
-  publisher={IEEE}
+  publisher={Institute of Electrical and Electronics Engineers (IEEE)}
 }
 
 
@@ -763,12 +763,12 @@ publisher={Blackwell}
 @article{boettiger2015introduction,
   title={An introduction to {Docker} for reproducible research},
   author={Boettiger, Carl},
-  journal={ACM SIGOPS Operating Systems Review},
+  journal={Association for Computing Machinery (ACM) SIGOPS Operating Systems Review},
   volume={49},
   number={1},
   pages={71--79},
   year={2015},
-  publisher={ACM}
+  publisher={Association for Computing Machinery (ACM)}
 }
 
 
@@ -819,7 +819,7 @@ publisher={Blackwell}
   volume={5},
   publisher={Northern European Association for Language Technology (NEALT)},
   pages={27--32},
-  series={NEALT Proceedings Series},
+  series={Northern European Association for Language Technology (NEALT) Proceedings Series},
   year={2009},
   url={https://dspace.ut.ee/handle/10062/9670},
   note={Last accessed May~1, 2018},
@@ -881,10 +881,10 @@ publisher={Blackwell}
   doi = {10.1080/10848770.2013.804729}
 }
 
-@article{gibson2016assessing,
+@inproceedings{gibson2016assessing,
   title={Assessing digital vitality: analytical and activist approaches},
   author={Gibson, Maik},
-  journal={CCURL 2016 Collaboration and Computing for Under-Resourced Languages: Towards an Alliance for Digital Language Diversity},
+  journal={Proceedings of EACL 2016 Collaboration and Computing for Under-Resourced Languages: Towards an Alliance for Digital Language Diversity (CCURL) Workshop},
   pages={46},
   year={2016}
 }
@@ -933,7 +933,7 @@ publisher={Blackwell}
   booktitle={Proceedings of the tenth international conference on Information and knowledge management},
   pages={279--286},
   year={2001},
-  organization={ACM}
+  organization={Association for Computing Machinery (ACM)}
 }
 
 @article{prensky2001digital,
@@ -1084,10 +1084,10 @@ publisher={Blackwell}
 @article{bourhis2001reversing,
   title={Reversing language shift in {Quebec}},
   author={Bourhis, Richard Y},
-  journal={MULTILINGUAL MATTERS},
+  journal={Multilingual matters},
   pages={101--141},
   year={2001},
-  publisher={MULTILINGUAL MATTERS LTD}
+  publisher={Multilingual Matters LTD}
 }
 
 @article{lewis2010assessing,
@@ -1204,12 +1204,12 @@ title = {Directory International cooperation programs for the protection and pro
 @article{oard2003surprise,
  title={The surprise language exercises},
  author={Oard, Douglas W},
- journal={ACM Transactions on Asian Language Information Processing (TALIP)},
+ journal={Association for Computing Machinery (ACM) Transactions on Asian Language Information Processing (TALIP)},
  volume={2},
  number={2},
  pages={79--84},
  year={2003},
- publisher={ACM}
+ publisher={}
 }
 
 
@@ -1371,10 +1371,10 @@ title = {Directory International cooperation programs for the protection and pro
 @inproceedings{williams2014computational,
   title={A computational pipeline for crowdsourced transcriptions of {Ancient Greek} papyrus fragments},
   author={Williams, Alex C and Wallin, John F and Yu, Haoyu and Perale, Marco and Carroll, Hyrum D and Lamblin, Anne-Francoise and Fortson, Lucy and Obbink, Dirk and Lintott, Chris J and Brusuelas, James H},
-  booktitle={Big Data (Big Data), 2014 IEEE International Conference on},
+  booktitle={Big Data (Big Data), 2014 Institute of Electrical and Electronics Engineers (IEEE) International Conference on},
   pages={100--105},
   year={2014},
-  organization={IEEE}
+  organization={Institute of Electrical and Electronics Engineers (IEEE)}
 }
 
 @article{hinton2001sleeping,
@@ -1499,7 +1499,7 @@ title = {Directory International cooperation programs for the protection and pro
 
 @article{simons2013world,
  title={The world's languages in crisis},
- author={Simons, Gary F and Lewis, MPaul},
+ author={Simons, Gary F. and Lewis, M. Paul},
  journal={Responses to language endangerment: In honor of Mickey Noonan. New directions in language documentation and language revitalization},
  volume={3},
  pages={20},
@@ -1652,7 +1652,7 @@ title = {Directory International cooperation programs for the protection and pro
   booktitle={Proceedings of the 11th working conference on mining software repositories},
   pages={384--387},
   year={2014},
-  organization={ACM}
+  organization={Association for Computing Machinery (ACM)}
 }
 
 @inproceedings{gousios2012ghtorrent,
@@ -1661,7 +1661,7 @@ title = {Directory International cooperation programs for the protection and pro
   booktitle={Mining software repositories (msr), 2012 9th ieee working conference on},
   pages={12--21},
   year={2012},
-  organization={IEEE}
+  organization={Institute of Electrical and Electronics Engineers (IEEE)}
 }
 
 @inproceedings{kalliamvakou2014promises,
@@ -1670,17 +1670,17 @@ title = {Directory International cooperation programs for the protection and pro
   booktitle={Proceedings of the 11th working conference on mining software repositories},
   pages={92--101},
   year={2014},
-  organization={ACM}
+  organization={Association for Computing Machinery (ACM)}
 }
 
 @inproceedings{beller2016analyzing,
   title={Analyzing the state of static analysis: A large-scale evaluation in open source software},
   author={Beller, Moritz and Bholanath, Radjino and McIntosh, Shane and Zaidman, Andy},
-  booktitle={Software Analysis, Evolution, and Reengineering (SANER), 2016 IEEE 23rd International Conference on},
+  booktitle={Software Analysis, Evolution, and Reengineering (SANER), 2016 Institute of Electrical and Electronics Engineers (IEEE) 23rd International Conference on},
   volume={1},
   pages={470--481},
   year={2016},
-  organization={IEEE}
+  organization={Institute of Electrical and Electronics Engineers (IEEE)}
 }
 
 @inproceedings{allamanis2013mining,
@@ -1689,7 +1689,7 @@ title = {Directory International cooperation programs for the protection and pro
   booktitle={Proceedings of the 10th Working Conference on Mining Software Repositories},
   pages={207--216},
   year={2013},
-  organization={IEEE Press}
+  organization={Institute of Electrical and Electronics Engineers (IEEE) Press}
 }
 
 @article{moshagenopen,
@@ -1951,17 +1951,17 @@ title = {Directory International cooperation programs for the protection and pro
 @inproceedings{zagalsky2015,
  title={The emergence of {GitHub} as a collaborative platform for education},
  author={Zagalsky, Alexey and Feliciano, Joseph and Storey, Margaret-Anne and Zhao, Yiyun and Wang, Weiliang},
- booktitle={Proceedings of the 18th ACM Conference on Computer Supported Cooperative Work \& Social Computing},
+ booktitle={Proceedings of the 18th Association for Computing Machinery (ACM) Conference on Computer Supported Cooperative Work \& Social Computing},
  pages={1906--1917},
  year={2015},
- organization={ACM}
+ organization={Association for Computing Machinery (ACM)}
 }
 
 @inproceedings{storey2014,
 author = {Storey, Margaret-Anne and Singer, Leif and Cleary, Brendan and Figueira Filho, Fernando and Zagalsky, Alexey},
 title = {The ({R}) Evolution of Social Media in Software Engineering},
 booktitle = {Proceedings of the on Future of Software Engineering},
-series = {FOSE 2014},
+series = {Future of Software Engineering (FOSE) 2014},
 year = {2014},
 isbn = {978-1-4503-2865-4},
 location = {Hyderabad, India},
@@ -1971,7 +1971,7 @@ url = {https://doi.acm.org/10.1145/2593882.2593887},
 note={Last accessed May~1, 2018},
 doi = {10.1145/2593882.2593887},
 acmid = {2593887},
-publisher = {ACM},
+publisher = {Association for Computing Machinery (ACM)},
 address = {New York, NY, USA},
 keywords = {Collaboration, Social Media, Software Engineering},
 }
@@ -2011,7 +2011,7 @@ keywords = {Collaboration, Social Media, Software Engineering},
  lccn={2017935967},
  series={Palgrave Studies in Oral History},
  year={2017},
- publisher={Palgrave Macmillan US}
+ publisher={Palgrave Macmillan USA}
 }
 
 @book{naskapi-new-testament,
@@ -2019,7 +2019,7 @@ keywords = {Collaboration, Social Media, Software Engineering},
  author="{Naskapi Development Corporation}",
  year={2007},
  isbn={978-0-88843-557-8},
- url={https://www.scriptureearth.org/data/nsk/PDF/00-WNTnsk-web.pdf},
+ url={https://www.scriptureearth.org/data/nsk/pdf/00-wntnsk-web.pdf},
  note={Last accessed May~1, 2018},
  publisher={Naskapi Development Corporation and Wycliffe Bible Translators}
 }
