--- a/references.bib
+++ b/references.bib
@@ -8,13 +8,23 @@
 }
 
 @article{google2016google,
-title = {Google's Neural Machine Translation System: Bridging the Gap between Human and Machine Translation},
-author  = {Yonghui Wu and Mike Schuster and Zhifeng Chen and Quoc V. Le and Mohammad Norouzi and Wolfgang Macherey and Maxim Krikun and Yuan Cao and Qin Gao and Klaus Macherey and Jeff Klingner and Apurva Shah and Melvin Johnson and Xiaobing Liu and Łukasz Kaiser and Stephan Gouws and Yoshikiyo Kato and Taku Kudo and Hideto Kazawa and Keith Stevens and George Kurian and Nishant Patil and Wei Wang and Cliff Young and Jason Smith and Jason Riesa and Alex Rudnick and Oriol Vinyals and Greg Corrado and Macduff Hughes and Jeffrey Dean},
-year  = {2016},
-url = {https://arxiv.org/abs/1609.08144},
-journal = {Computing Research Repository (CoRR)},
-volume  = {abs/1609.08144}
+  title = {Google's Neural Machine Translation System: Bridging the Gap between Human and Machine Translation},
+  author  = {Yonghui Wu and Mike Schuster and Zhifeng Chen and Quoc V. Le and Mohammad Norouzi and Wolfgang Macherey and Maxim Krikun and Yuan Cao and Qin Gao and Klaus Macherey and Jeff Klingner and Apurva Shah and Melvin Johnson and Xiaobing Liu and Łukasz Kaiser and Stephan Gouws and Yoshikiyo Kato and Taku Kudo and Hideto Kazawa and Keith Stevens and George Kurian and Nishant Patil and Wei Wang and Cliff Young and Jason Smith and Jason Riesa and Alex Rudnick and Oriol Vinyals and Greg Corrado and Macduff Hughes and Jeffrey Dean},
+  year  = {2016},
+  url = {https://arxiv.org/abs/1609.08144},
+  journal = {Computing Research Repository (CoRR)},
+  volume  = {abs/1609.08144}
 }
+
+@inproceedings{jancewicz2012cree,
+  title={Cree syllabic fonts: development, compatibility and usage in the digital world},
+  author={Jancewicz, Bill and Junker, Marie-Odile},
+  booktitle={Papers of the Fortieth Algonquian Conference: Actes du Congr{\`e}s des Algonquinistes},
+  pages={151},
+  year={2012},
+  organization={{SUNY} Press}
+}
+
 
 @unpublished{littauerfacebook,
   title={Constructing Corpora for Low Resource Languages from Social Media},
@@ -46,7 +56,7 @@ volume  = {abs/1609.08144}
 }
 
 @article{dingemanse2008review,
-  title={Review of Phonology Assistant 3.0. 1},
+  title={Review of {Phonology Assistant} 3.0. 1},
   author={Dingemanse, Mark},
   journal={Language Documentation and Conservation},
   year={2008},
@@ -58,7 +68,7 @@ volume  = {abs/1609.08144}
 }
 
 @article{garofolo1993darpa,
-  title={DARPA TIMIT acoustic-phonetic continous speech corpus CD-ROM. NIST speech disc 1-1.1},
+  title={DARPA {TIMIT} acoustic-phonetic continous speech corpus {CD-ROM}. {NIST} speech disc 1-1.1},
   author={Garofolo, John S and Lamel, Lori F and Fisher, William M and Fiscus, Jonathan G and Pallett, David S},
   journal={NASA STI/Recon technical report n},
   volume={93},
@@ -66,7 +76,7 @@ volume  = {abs/1609.08144}
 }
 
 @inproceedings{kempton2009finding,
-  title={Finding allophones: An evaluation on consonants in the TIMIT corpus},
+  title={Finding allophones: An evaluation on consonants in the {TIMIT} corpus},
   author={Kempton, Timothy and Moore, Roger K},
   booktitle={Tenth Annual Conference of the International Speech Communication Association},
   year={2009}
@@ -74,7 +84,7 @@ volume  = {abs/1609.08144}
 
 
 @inproceedings{fraga2015improving,
-  title={Improving data selection for low-resource STT and KWS},
+  title={Improving data selection for low-resource {STT} and {KWS}},
   author={Fraga-Silva, Thiago and Laurent, Antoine and Gauvain, Jean-Luc and Lamel, Lori and Le, Viet-Bac and Messaoudi, Abdel},
   booktitle={Automatic Speech Recognition and Understanding (ASRU), 2015 Institute of Electrical and Electronics Engineers (IEEE) Workshop on},
   pages={153--159},
@@ -92,7 +102,7 @@ volume  = {abs/1609.08144}
 
 
 @inproceedings{fraga2015active,
-  title={Active Learning based data selection for limited resource STT and KWS},
+  title={Active Learning based data selection for limited resource {STT} and {KWS}},
   author={Fraga-Silva, Thiago and Gauvain, Jean-Luc and Lamel, Lori and Laurent, Antoine and Le, Viet-Bac and Messaoudi, Abdel},
   booktitle={Sixteenth Annual Conference of the International Speech Communication Association},
   year={2015}
@@ -157,7 +167,6 @@ volume  = {abs/1609.08144}
 }
 
 @inproceedings{LittIDCC,
-	Abstract  = {Scientific workflows are typically used to automate the processing, analysis, and management of scientific data. Most scientific workflow programs provide a user-friendly graphical user interface that enables scientists to more easily create and visualize complex workflows that may be comprised of dozens of processing and analytical steps. Furthermore, many workflows provide mechanisms for tracing provenance and methodologies that foster reproducible science. Despite their potential for enabling science, few studies have examined how the process of creating, executing, and sharing workflows can be improved. In order to promote open discourse and access to scientific methods as well as data, we analyzed a wide variety of workflow systems and publicly-available workflows on the public repository myExperiment. It is hoped that understanding the usage of workflows and developing a set of recommended best practices will lead to increased contribution of workflows to the public domain.},
 	Author    = {Richard Littauer and Karthik Ram and Bertram Lud{\"a}scher and William Michener and Rebecca Koskela},
 	booktitle   = {7th International Digital Curation Conference Proceedings},
 	Month     = {December},
@@ -884,9 +893,29 @@ publisher={Blackwell}
 @inproceedings{gibson2016assessing,
   title={Assessing digital vitality: analytical and activist approaches},
   author={Gibson, Maik},
-  journal={Proceedings of EACL 2016 Collaboration and Computing for Under-Resourced Languages: Towards an Alliance for Digital Language Diversity (CCURL) Workshop},
-  pages={46},
+  booktitle={Proceedings of LREC 2016 Collaboration and Computing for Under-Resourced Languages: Towards an Alliance for Digital Language Diversity ({CCURL}) Workshop},
+  editor = {Soria, Claudia and Pretorius, Laurette and Declerck, Thierry and Mariani, Joseph and Scannell, Kevin and Wandl-Vogt, Eveline},
+  address = {Portoro\v{z}, Slovenia},
+  pages={46-51},
   year={2016}
+}
+
+@article{penfield2006technology,
+  title={Technology-enhanced language revitalization},
+  author={Penfield, Susan and Cash, P and Galla, CK and Williams, T and ShadowWalker, D},
+  journal={Tucson, AZ: University of Arizona},
+  year={2006}
+}
+
+
+@inproceedings{CCURL,
+	Author  = {Littauer, Richard and Paterson III, Hugh},
+	Title   = {Open Source Code Serving Endangered Languages},
+	Booktitle = {Proceedings of LREC 2016 Collaboration and Computing for Under-Resourced Languages: Towards an Alliance for Digital Language Diversity ({CCURL}) Workshop},
+  Editor  = {Soria, Claudia and Pretorius, Laurette and Declerck, Thierry and Mariani, Joseph and Scannell, Kevin and Wandl-Vogt, Eveline},
+  Address  = {Portoro\v{z}, Slovenia},
+  pages = {86-88},
+	Year   = {2016}
 }
 
 @article{jancewicz2002applied,
@@ -1391,15 +1420,6 @@ title = {Directory International cooperation programs for the protection and pro
  author={Leonard, Wesley},
  booktitle={36th Annual Algonquian Conference, Madison, WI},
  year={2004}
-}
-
-@inproceedings{CCURL,
-	Author  = {Littauer, Richard and Paterson III, Hugh},
-	Title   = {Open Source Code Serving Endangered Languages},
-	Booktitle = {Proceedings of LREC 2016 Collaboration and Computing for Under-Resourced Languages: Towards an Alliance for Digital Language Diversity (CCURL) Workshop},
-  Editor  = {Soria, Claudia and Pretorius, Laurette and Declerck, Thierry and Mariani, Joseph and Scannell, Kevin and Wandl-Vogt, Eveline},
-  Address  = {Portoro\v{z}, Slovenia},
-	Year   = {2016}
 }
 
 @incollection{chiarcos2013building,
