chore: Small edits

--- a/references.bib
+++ b/references.bib
@@ -993,7 +993,7 @@ publisher={Blackwell}
   author={Fishman, Joshua A},
   volume={76},
   year={1991},
-  publisher={Multilingual matters}
+  publisher={Multilingual Matters}
 }
 
 @article{krauss2007classification,
@@ -1113,10 +1113,10 @@ publisher={Blackwell}
 @article{bourhis2001reversing,
   title={Reversing language shift in {Quebec}},
   author={Bourhis, Richard Y},
-  journal={Multilingual matters},
+  journal={Multilingual Matters},
   pages={101--141},
   year={2001},
-  publisher={Multilingual Matters LTD}
+  publisher={Multilingual Matters Ltd}
 }
 
 @article{lewis2010assessing,
@@ -2039,7 +2039,7 @@ keywords = {Collaboration, Social Media, Software Engineering},
  author="{Naskapi Development Corporation}",
  year={2007},
  isbn={978-0-88843-557-8},
- url={https://www.scriptureearth.org/data/nsk/pdf/00-wntnsk-web.pdf},
+ url={https://www.scriptureearth.org/data/nsk/PDF/00-WNTnsk-web.pdf},
  note={Last accessed May~1, 2018},
  publisher={Naskapi Development Corporation and Wycliffe Bible Translators}
 }
