chore: update to check string

--- a/meeting-notes/2016-09-6.md
+++ b/meeting-notes/2016-09-6.md
@@ -9,7 +9,7 @@
 
 - LREC
 - Roadmap
-- Github Milestones: https://github.com/RichardLitt/thesis/milestone/1
+- GitHub Milestones: https://github.com/RichardLitt/thesis/milestone/1
 - Looking at the introduction
 - What about resources?
 - What about data archival?
