Finished editing FLOSS section
Also moved the ethics section to the Discussion chapter

--- a/discussion.tex
+++ b/discussion.tex
@@ -6,6 +6,20 @@
 
 % Alexis: yes, in fact I think it's rather a different enterprise than defining language endangerment -- you may want to explicitly address the interaction between the two. what is your stance on the question? does lack of digital presence necessarily equate to language endangerment? (I think it's a very interesting question)
 
+
+\subsection{Ethics and open source}
+\label{subsec:oss-ethics}
+
+The quote from Richard Stallman in Section~\ref{subsec:defining-open-source} mentioned that "free software is an ethical imperative." This is, to put it mildly, a loaded statement, and comes from a philosophical viewpoint that not everyone agrees with. Open source, for all of its benefits, has serious drawbacks for developers involved in it.
+
+For one, the overwhelming majority of open source coders on online communities are male, young, and white \citep{ghosh2002free}. A survey of 100k users from StackOverflow,\footnote{\href{https://stackoverflow.com/}{https://stackoverflow.com/}. \last{May~2}} a large language-agnostic forum for support and technical questions, found that this has changed little since in the past fifteen years, with 92.9\% of the users being male and 75\% of them white.\footnote{\href{https://insights.stackoverflow.com/survey/2018/}{https://insights.stackoverflow.com/survey/2018/}. \last{May~2}} Open source is disproportionally skewed towards already advantaged groups.
+
+The incentives around open source contributions are also changeable, and while paid workers are more likely to contribute in the long run, users who contribute to code because of the value of the code to them are less likely to stay in the community for long periods of time \citep{roberts2006understanding, shah2006motivation}. Ultimately, it is hobbyists who end up working on code the longest, after the initial value to them has worn off \citep{shah2006motivation}. This has implications for low resource languages; is open source the best vehicle for developing language software, which may have long runways? On another note, is it ethical to implement a system where there is high burnout rate for developers who need it, when it may make more sense to find ways to fund direct work for a small core of dedicated developers?
+
+To make this issue clearer, consider the position of a linguist encouraging language activists to build a localised wikipedia. Encouraging wikipedia contributions amounts to encouraging users to invest time which they may not be in an economically advantaged position to spend, as speakers of low resource languages are overwhelmingly not Western, educated, industrialised, rich, or from democratic countries - the WEIRD group described in \citet{henrich2010most}. Further, the system tends towards high initial attrition rates and with diminishing returns for the main investors. Whether encouraging someone to enter such a process is an ethical choice is left up to the reader; I certainly don't have an answer.
+
+These are a couple of small examples of where advocating open source is not a clearcut issue. This paper is not meant to provide a solid overview of all ethical issues; however, at least some of them are worth noting here as caveats. For low resource languages, open source coding presents a clear opportunity for allowing communities to work together, cross-linguistically and between stakeholders, with a minimum of friction caused by proprietary licensing. It is my opinion that any work which can be expedited or made redundant may be useful in a field where languages are dying at exorbitant rates.
+
 \subsection{Open Source as a tool for saving languages}
 
 So: how can the open source methodology for software development low resource languages?
