--- a/references.bib
+++ b/references.bib
@@ -16,6 +16,17 @@
   volume  = {abs/1609.08144}
 }
 
+@article{henrich2010most,
+  title={Most people are not WEIRD},
+  author={Henrich, Joseph and Heine, Steven J and Norenzayan, Ara},
+  journal={Nature},
+  volume={466},
+  number={7302},
+  pages={29},
+  year={2010},
+  publisher={Nature Publishing Group}
+}
+
 @inproceedings{jancewicz2012cree,
   title={Cree syllabic fonts: development, compatibility and usage in the digital world},
   author={Jancewicz, Bill and Junker, Marie-Odile},
@@ -23,6 +34,17 @@
   pages={151},
   year={2012},
   organization={{SUNY} Press}
+}
+
+@article{hardin2009tragedy,
+  title={The tragedy of the commons},
+  author={Hardin, Garrett},
+  journal={Journal of Natural Resources Policy Research},
+  volume={1},
+  number={3},
+  pages={243--253},
+  year={2009},
+  publisher={Taylor \& Francis}
 }
 
 
